# agentic-eng

./: .gitignore  LICENSE  README.md
modulos/modulo-1/1.1-arquitetura-gpt/: configuracao-ambiente-experimentos.md  exemplo-implementacao.ipynb  tutorial-miniconda.md
modulos/modulo-1/1.3-mllm-interface-modelos/: atividade.md  integracao-azure.ipynb  multimodalidade-gpt-gemini.ipynb  pyproject.toml
modulos/modulo-2/2.3-projeto/: atividade.md
modulos/modulo-3/3.1-langchain/: langchain-parte-1.ipynb  langchain-parte-2.ipynb  pyproject.toml
modulos/modulo-3/3.1-langchain/resources/: music_playlists.db
modulos/modulo-3/3.2-langgraph/: langgraph.ipynb  pyproject.toml
modulos/modulo-3/3.2-langgraph/myapp/src/: agent.py
modulos/modulo-3/3.3-mcp/: langchain-mcp.ipynb  pyproject.toml  server.py  simple-server.py
