[project]
name = "3-1-langchain"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.28",
    "langchain-graph-retriever>=0.8.0",
    "langchain-openai>=1.1.12",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "tavily>=1.1.0",
]
