[project]
name = "3-2-langgraph"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "ipython>=9.12.0",
    "jupyter>=1.1.1",
    "langchain-core>=1.3.1",
    "langchain-openai>=1.2.0",
    "langgraph>=1.1.9",
    "langgraph-cli[inmem]>=0.4.24",
    "pyppeteer>=2.0.0",
    "python-dotenv>=1.2.2",
    "typing-extensions>=4.15.0",
]
