[project]
name = "3-3-mcp"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-mcp-adapters>=0.2.0",
    "langgraph>=1.0.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.20.0",
]
